--- a/config.org
+++ b/config.org
@@ -52,13 +52,13 @@
        ophints           ; highlight the region an operation acts on
        (popup +defaults)   ; tame sudden yet inevitable temporary windows
        (smooth-scroll +interpolate)     ; So smooth you won't believe it's not butter
-       ;;tabs              ; a tab bar for Emacs
+       ;; tabs              ; a tab bar for Emacs
        ;;treemacs          ; a project drawer, like neotree but cooler
        ;;unicode           ; extended unicode support for various languages
        (vc-gutter +pretty) ; vcs diff in the fringe
        vi-tilde-fringe   ; fringe tildes to mark beyond EOB
        ;;window-select     ; visually switch windows
-       workspaces        ; tab emulation, persistence & separate workspaces
+       workspaces       ; tab emulation, persistence & separate workspaces
        ;;zen               ; distraction-free coding or writing
 
        :editor
@@ -680,6 +680,14 @@ https://github.com/marcinkoziej/org-pomodoro/issues/89#issuecomment-1058725921
 ***** Denote Org
 #+begin_src emacs-lisp :tangle packages.el
 (package! denote-org)
+#+end_src
+*** Org Noter
+#+begin_src emacs-lisp :tangle yes
+;; HACK Prevents strange behavior interacting betwee org-noter and persp-mode that prevents the new frame from being closed. Avoid this by just preventing a new frame from being made in the first place.
+(after! org-noter
+  (setq org-noter-always-create-frame nil
+        org-noter-kill-frame-at-session-end nil
+        org-noter-auto-save-last-location nil))
 #+end_src
 * Email
 * App
