Set symbol font to JuliaMono.

--- a/config.org
+++ b/config.org
@@ -447,7 +447,8 @@
 ;; accept. For example:
 ;;
 (setq doom-font (font-spec :family "Maple Mono NF" :size 13)
-     doom-variable-pitch-font (font-spec :family "Maple Mono NF" :size 13))
+     doom-variable-pitch-font (font-spec :family "Maple Mono NF" :size 13)
+     doom-symbol-font (font-spec :family "JuliaMono" :size 13))
 ;;
 ;; If you or Emacs can't find your font, use 'M-x describe-font' to look them
 ;; up, `M-x eval-region' to execute elisp code, and 'M-x doom/reload-font' to
