Experimenting with custom org-return.

--- a/config.org
+++ b/config.org
@@ -554,6 +554,27 @@ Meow for some reason overrides the mapping of =helpful-describe-key=. This resto
  (meow-pop-selection . meow-pop-grab)
  (meow-beacon-change . meow-beacon-change-char))))
 #+end_src
+*** Shims
+**** Org
+***** COMMENT Better =org-return=
+Combine alphapapa's =unpackaged/org-return=dwim= with doom's =+org/dwim= integrated with meow.
+#+begin_src emacs-lisp :tangle yes
+(defun +my/org-return-dwim (&optionl ARG)
+  (interactive "P")
+      (if (meow--current-state 'normal)
+          (unpackaged/org-return-dwim default)
+        (+org/dwim-at-point ARG)))
+#+end_src
+
+#+RESULTS:
+: +my/org-return-dwim
+
+#+begin_src emacs-lisp :tangle yes
+(after! (:and meow org)
+  (map! :map org-mode-map
+        "RET" #'+my/org-return-dwim
+        [return] #'+my/org-return-dwim))
+#+end_src
 
 ** Casual
 #+begin_src emacs-lisp :tangle packages.el
@@ -721,6 +742,87 @@ Pressing return follows the link
 #+begin_src emacs-lisp :tangle yes
 (after! org
   (setq org-return-follows-link t))
+#+end_src
+**** =org-return-dwim=
+Better org-return adapted for doom emacs: https://github.com/alphapapa/unpackaged.el?tab=readme-ov-file#org-return-dwim
+#+begin_src emacs-lisp :tangle yes
+(defun unpackaged/org-element-descendant-of (type element)
+  "Return non-nil if ELEMENT is a descendant of TYPE.
+TYPE should be an element type, like `item' or `paragraph'.
+ELEMENT should be a list like that returned by `org-element-context'."
+  ;; MAYBE: Use `org-element-lineage'.
+  (when-let* ((parent (org-element-property :parent element)))
+    (or (eq type (car parent))
+        (unpackaged/org-element-descendant-of type parent))))
+
+;;;###autoload
+(defun unpackaged/org-return-dwim (&optional default)
+  "A helpful replacement for `org-return'.  With prefix, call `org-return'.
+
+On headings, move point to position after entry content.  In
+lists, insert a new item or end the list, with checkbox if
+appropriate.  In tables, insert a new row or end the table."
+  ;; Inspired by John Kitchin: http://kitchingroup.cheme.cmu.edu/blog/2017/04/09/A-better-return-in-org-mode/
+  (interactive "P")
+  (if default
+      (org-return)
+    (cond
+     ;; Act depending on context around point.
+
+     ;; NOTE: I prefer RET to not follow links, but by uncommenting this block, links will be
+     ;; followed.
+
+     ;; ((eq 'link (car (org-element-context)))
+     ;;  ;; Link: Open it.
+     ;;  (org-open-at-point-global))
+
+     ((org-at-heading-p)
+      ;; Heading: Move to position after entry content.
+      ;; NOTE: This is probably the most interesting feature of this function.
+      (let ((heading-start (org-entry-beginning-position)))
+        (goto-char (org-entry-end-position))
+        (cond ((and (org-at-heading-p)
+                    (= heading-start (org-entry-beginning-position)))
+               ;; Entry ends on its heading; add newline after
+               (end-of-line)
+               (insert "\n\n"))
+              (t
+               ;; Entry ends after its heading; back up
+               (forward-line -1)
+               (end-of-line)
+               (when (org-at-heading-p)
+                 ;; At the same heading
+                 (forward-line)
+                 (insert "\n")
+                 (forward-line -1))
+               ;; FIXME: looking-back is supposed to be called with more arguments.
+               (while (not (looking-back (rx (repeat 3 (seq (optional blank) "\n")))))
+                 (insert "\n"))
+               (forward-line -1)))))
+
+     ((when (fboundp 'org-inlinetask-in-task-p)
+        (org-inlinetask-in-task-p))
+      ;; Inline task: Don't insert a new heading.
+      (org-return))
+
+     ((org-at-table-p)
+      (cond ((save-excursion
+               (beginning-of-line)
+               ;; See `org-table-next-field'.
+               (cl-loop with end = (line-end-position)
+                        for cell = (org-element-table-cell-parser)
+                        always (equal (org-element-property :contents-begin cell)
+                                      (org-element-property :contents-end cell))
+                        while (re-search-forward "|" end t)))
+             ;; Empty row: end the table.
+             (delete-region (line-beginning-position) (line-end-position))
+             (org-return))
+            (t
+             ;; Non-empty row: call `org-return'.
+             (org-return))))
+     (t
+      ;; All other cases: call `org-return'.
+      (org-return)))))
 #+end_src
 
 *** Org directory
